# components/api-server/plugins/repositories/plugin.go
@@ -1,0 +1,62 @@
+package repositories
+
+import (
+	"net/http"
+
+	"github.com/gorilla/mux"
+
+	"github.com/openshift-online/rh-trex-ai/components/api-server/pkg/api/presenters"
+	"github.com/openshift-online/rh-trex-ai/components/api-server/pkg/auth"
+	"github.com/openshift-online/rh-trex-ai/components/api-server/pkg/db"
+	"github.com/openshift-online/rh-trex-ai/components/api-server/pkg/environments"
+	"github.com/openshift-online/rh-trex-ai/components/api-server/pkg/registry"
+	pkgserver "github.com/openshift-online/rh-trex-ai/components/api-server/pkg/server"
+	"github.com/openshift-online/rh-trex-ai/components/api-server/plugins/generic"
+)
+
+type ServiceLocator func() RepositoryService
+
+func NewServiceLocator(env *environments.Env) ServiceLocator {
+	dao := NewRepositoryDao(&env.Database.SessionFactory)
+	return func() RepositoryService {
+		return NewRepositoryService(dao)
+	}
+}
+
+func Service(s *environments.Services) RepositoryService {
+	if s == nil {
+		return nil
+	}
+	if obj := s.GetService("Repositories"); obj != nil {
+		locator := obj.(ServiceLocator)
+		return locator()
+	}
+	return nil
+}
+
+func init() {
+	registry.RegisterService("Repositories", func(env interface{}) interface{} {
+		return NewServiceLocator(env.(*environments.Env))
+	})
+
+	pkgserver.RegisterPrefixedRoutes("repositories", "ext", func(extRouter *mux.Router, services pkgserver.ServicesInterface, authMiddleware environments.JWTMiddleware, authzMiddleware auth.AuthorizationMiddleware) {
+		envServices := services.(*environments.Services)
+		h := NewRepositoryHandler(Service(envServices), generic.Service(envServices))
+
+		router := extRouter.PathPrefix("/repositories").Subrouter()
+		router.HandleFunc("", h.List).Methods(http.MethodGet)
+		router.HandleFunc("/{id}", h.Get).Methods(http.MethodGet)
+		router.HandleFunc("", h.Create).Methods(http.MethodPost)
+		router.HandleFunc("/{id}", h.Patch).Methods(http.MethodPatch)
+		router.HandleFunc("/{id}", h.Delete).Methods(http.MethodDelete)
+		router.Use(authMiddleware.AuthenticateAccountJWT)
+		router.Use(authzMiddleware.AuthorizeApi)
+	})
+
+	presenters.RegisterPath(Repository{}, "repositories")
+	presenters.RegisterPath(&Repository{}, "repositories")
+	presenters.RegisterKind(Repository{}, "Repository")
+	presenters.RegisterKind(&Repository{}, "Repository")
+
+	db.RegisterMigration(migration())
+}
